--- a/replicaset.yml
+++ b/replicaset.yml
@@ -1,20 +1,20 @@
-apiVersion: v1
+apiVersion: apps/v1
 kind: ReplicaSet
 metadata:
-	name: myweb-rs
+  name: myweb-rs
 spec:
-	replicas: 3
-	selector:
-		matchLabels:
-			env: production
+  replicas: 4
+  selector:
+    matchLabels:
+      env: production
 #		 matchExpressions:
 #		 	- { key: env, operator: In, values: [ prodcution ] }
-	template:
-		metadata:
-			name: myweb-pod
-			labels:
-				env: production
-		spec:
-			containers:
-			- name: myweb-con
-			  image: httpd
+  template:
+    metadata:
+      name: myweb-pod
+      labels:
+	env: production
+    spec:
+      containers:
+      - name: myweb-con
+	image: httpd
